# micro-sockets

./: .clang-format  .gitignore  CMakeLists.txt  README.md  gen_compile_commands.sh  xmake.lua
examples/: CMakeLists.txt  tcp_client.c  tcp_server.c
include/micro-sockets/: _defs.h  _sock_addr_any.h  buf.h  sock.h  sock_addr_any.h  sockaddr.h  socket.h  tcp.h  udp.h
include/micro_sockets/: __addr.h  __macros.h  box.h  sized_mem.h  str.h  tcp.h
